# sz-sdk-python

./: .buildinfo  .gitignore  .isort.cfg  .mypy.ini  .project  .pydevproject  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  data.json  development-requirements.txt  documentation-requirements.txt  genindex.html  index.html  modules.html  objects.inv  official-doc.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  senzing.html  setup.cfg  test-requirements.txt
.claude/: CLAUDE.md
.doctrees/: environment.pickle  index.doctree  modules.doctree  senzing.doctree
.github/linters/: README.md
.github/workflows/: bandit.yaml  black.yaml  build-distribution.yaml  check-development-dependencies.yaml  create-sphinx-documentation.yaml  dependency-scan.yaml  flake8.yaml  isort.yaml  mypy.yaml  publish-to-pypi.yaml  pylint.yaml  pytest-darwin.yaml  pytest-darwin.yaml.disabled  pytest-linux.yaml  pytest-windows.yaml  python-code-quality.yaml  unittest-linux.yaml
_modules/: index.html
_modules/senzing/: szabstractfactory.html  szconfig.html  szconfigmanager.html  szdiagnostic.html  szengine.html  szengineflags.html  szerror.html  szproduct.html
_sources/: index.rst.txt  senzing.rst.txt
docs/: README.md  development.md  errors.md  examples.md
docs/source/: conf.py  index.rst  modules.rst  senzing.rst  senzing_abstract.rst
examples/: README.md  __init__.py
examples/docs/: a_header_docs.py  import_sz_abstract_factory.py  import_sz_abstract_factory.txt  import_sz_engine.py  import_sz_engine.txt  using_abstract_factory.py  using_abstract_factory_core.py  using_abstract_factory_implementations.py  using_sz_engine.py
examples/helpers/: __init__.py  setup_senzing.py
examples/misc/: __init__.py  add_truthset_data.py  add_truthset_datasources.py  engine_flags_by_name.py  engine_flags_by_value.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1baf4de6d9c6c9ce___init___py.html  z_1baf4de6d9c6c9ce_customers_py.html  z_1baf4de6d9c6c9ce_datasources_py.html  z_1baf4de6d9c6c9ce_references_py.html  z_1baf4de6d9c6c9ce_watchlist_py.html  z_1e1761da053caf6e___init___py.html  z_1e1761da053caf6e_constants_py.html  z_1e1761da053caf6e_engine_exception_map_py.html  z_1e1761da053caf6e_observer_abstract_py.html  z_1e1761da053caf6e_szabstractfactory_abstract_py.html  z_1e1761da053caf6e_szconfig_abstract_py.html  z_1e1761da053caf6e_szconfigmanager_abstract_py.html  z_1e1761da053caf6e_szdiagnostic_abstract_py.html  z_1e1761da053caf6e_szengine_abstract_py.html  z_1e1761da053caf6e_szengineflags_py.html  z_1e1761da053caf6e_szerror_py.html  z_1e1761da053caf6e_szhasher_abstract_py.html  z_1e1761da053caf6e_szhelpers_py.html  z_1e1761da053caf6e_szproduct_abstract_py.html  z_7e382458dca8125f___init___py.html  z_7e382458dca8125f_constants_py.html  z_7e382458dca8125f_szabstractfactory_py.html  z_7e382458dca8125f_szconfig_py.html  z_7e382458dca8125f_szconfigmanager_py.html  z_7e382458dca8125f_szdiagnostic_py.html  z_7e382458dca8125f_szengine_py.html  z_7e382458dca8125f_szengineflags_py.html  z_7e382458dca8125f_szerror_py.html  z_7e382458dca8125f_szhelpers_py.html  z_7e382458dca8125f_szproduct_py.html  z_a03a5e41ea04a006___init___py.html  z_a03a5e41ea04a006_senzing_mock_py.html
makefiles/: darwin.mk  linux.mk  windows.mk
tests/: __init__.py  conftest.py  g2config_test.py  g2configmgr_test.py  g2diagnostic_test.py  g2engine_test.py  g2product_test.py  szabstractfactory_test.py  szconfig_test.py  szconfigmanager_dict_test.py  szconfigmanager_test.py  szconfigmgr_test.py  szdiagnostic_test.py  szengine_test.py  szengineflags_test.py  szerror_test.py  szhelpers_test.py  szproduct_test.py
(+153 files in other folders)
