[metadata]
name = senzing
version = 0.2.5
author = senzing
author_email = support@senzing.com
description = Python SDK method definitions
license = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzing-garage/sz-sdk-python
project_urls =
    Bug Tracker = https://github.com/senzing-garage/sz-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typing-extensions >= 4.12.2; python_version<'3.11'

[options.packages.find]
where = src
